# goit-ds-hw-02

./: connect.py  create_tables.py  db_queries.py  drop.py  pyproject.toml  seed.py  tasks.db  truncate.py
